<resources>
    <string name="app_name">Sunday</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="text_notificationChannelHigh">channel_high</string>
    <string name="text_notificationChannelLow">channel_low</string>
    <string name="sample_txt">What is Lorem Ipsum?Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="new_post_hint">Whats Happening??</string>
    <string name="attendance">Attendance</string>
    <string name="courses">Courses</string>
    <string name="timeline">Timeline</string>
    <string name="menu">Menu</string>
    <string name="account">account</string>
    <string name="notification">notification</string>
    <string name="enable">enable</string>
    <string name="hotspot">Hotspot</string>
    <string name="hotspot_disable_hint">Hotspot is not enable\nClick here to enable now</string>
    <string name="server_disable_hint">Web server not activated\nClick here to start</string>
    <string name="web_submission">web server</string>
    <string name="new_course">new course</string>
    <string name="your_courses">Your Courses</string>
    <string name="students">Students</string>
    <string name="title_activity_student_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="assignments">Assignments</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot password</string>
    <string name="register">Register</string>










    <string name="multicolor">
        <font fgcolor="#92929d">By signing up, you confirm that you’ve read\nand accepted our</font>
        <font fgcolor="#0062ff">User Notice</font>
        <font fgcolor="#92929d">and</font>
        <font fgcolor="#0062ff">Privacy Policy.</font>
    </string>
    <string name="policy">
        <font fgcolor="#696974">I agree to Square’s </font>
        <font fgcolor="#ff2e63">Cookie</font>
        <font fgcolor="#696974">and</font>
        <font fgcolor="#50b5ff">Privacy Policy.</font>
    </string>

    <string name="register_hint">
        <font fgcolor="#696974">Don\'t have an account? </font>
        <font fgcolor="#ff2e63">Sign up</font>
    </string>
    <string name="login_hint"> Already have an account?</string>
    <string name="terms_and_condition">
        <font fgcolor="#92929d">By clicking "Get Started - Free!"\nI agree to Square’s <u>Terms of Service</u></font>
    </string>
    <string name="sign_up_to_your_account">Sign Up to your account</string>
    <string name="enter_mobile_hint">Please enter your mobile no\nwe will send a verification code</string>
    <string name="mobile_no">Mobile No</string>
    <string name="continue_txt">continue</string>
    <string name="verification_wait_msg">Please wait we are sending a verification sms to your number</string>
    <string name="verify">verify</string>
    <string name="resend">resend %s</string>
    <string name="retry">retry</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="id_no">ID No</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign up</string>

</resources>