<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. This file is created by Ariful Jannat Arif at 9/12/20 11:12 AM
  ~ please Dont modify this file unless prior permission from owner
  ~
  ~ Ariful Jannat Arif
  ~ software engineer at inverseai.com
  ~ cse.ariful@gmail.com
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.mvvmwithhilt.screens.register.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/splash_bg"
        android:layout_height="match_parent">
        <com.example.mvvmwithhilt.widgets.CircleImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            android:src="@mipmap/ic_launcher_foreground"
            android:elevation="12dp"
            app:layout_constraintBottom_toTopOf="@id/loginCard"
            app:layout_constraintTop_toTopOf="@id/loginCard"
            android:layout_width="80dp"
            android:layout_height="80dp" />
        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/loginCard"
            app:cardCornerRadius="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="12dp"
                android:padding="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:layout_marginTop="8dp"
                    android:id="@+id/signUpType"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/Widget.AppCompat.Button"
                        android:paddingRight="6dp"
                        android:paddingLeft="6dp"
                        android:layout_marginEnd="12dp"
                        android:text="Teacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        style="@style/Widget.AppCompat.Button"
                        android:paddingRight="6dp"
                        android:paddingLeft="6dp"
                        android:checked="@={viewModel.isStudent}"
                        android:layout_marginStart="12dp"
                        android:text="Student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/inputFields"
                    android:orientation="vertical"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/signUpType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <EditText
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_baseline_person_outline_24"
                            android:background="@drawable/input_border_bottom"
                            android:inputType="textPersonName"
                            android:hint="@string/full_name"
                            android:singleLine="true"
                            android:layout_marginTop="12dp"
                            app:layout_constraintTop_toBottomOf="@id/signInHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <EditText
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_outline_email_24"
                            android:background="@drawable/input_border_bottom"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email"
                            android:singleLine="true"
                            android:layout_marginTop="12dp"
                            app:layout_constraintTop_toBottomOf="@id/signInHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <EditText
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_outline_email_24"
                            android:background="@drawable/input_border_bottom"
                            android:inputType="numberSigned"
                            android:hint="@string/id_no"
                            android:singleLine="true"
                            android:layout_marginTop="12dp"
                            app:layout_constraintTop_toBottomOf="@id/signInHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <EditText
                        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                        android:drawablePadding="8dp"
                        android:background="@drawable/input_border_bottom"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:layout_marginTop="12dp"
                        app:layout_constraintTop_toBottomOf="@id/signInHint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                        android:drawablePadding="8dp"
                        android:background="@drawable/input_border_bottom"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password"
                        android:singleLine="true"
                        android:layout_marginTop="12dp"
                        app:layout_constraintTop_toBottomOf="@id/signInHint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <Button
                    android:id="@+id/signInBtn"
                    app:layout_constraintTop_toBottomOf="@id/inputFields"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/loginBtnHint"
                    android:layout_marginTop="32dp"
                    android:text="@string/login_hint"
                    app:layout_constraintTop_toBottomOf="@id/signInBtn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:textColor="?colorAccent"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    app:layout_constraintBottom_toBottomOf="@id/loginBtnHint"
                    app:layout_constraintTop_toTopOf="@id/loginBtnHint"
                    app:layout_constraintStart_toEndOf="@id/loginBtnHint"
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>